--- a/style.css
+++ b/style.css
@@ -20,43 +20,51 @@ body>header h2 {
     margin: 20px 0;
 }
 
-#module12 {
+.moduleSection {
     display: grid;
     max-width: 1000px;
     margin: 0 auto;
     grid-template: 1fr 1fr / 1fr 1fr;
-    grid-template-areas: "figure row1"
-                            "figure row2";
     justify-content: center;
     justify-items: center;
 }
 
-#module12 figure {
+.moduleSection figure {
     grid-area: figure;
 }
 
-#module12 figure img {
+.moduleSection figure img {
     width: 100%;
     height: 100%;
     text-align: center;
 }
 
-#module12 figure figcaption {
+.moduleSection figure figcaption {
     text-align: center;
     font-size: 0.9em;
     color: #333;
 }
 
-#module12 header {
+.moduleSection header {
     grid-area: row1;
     height: 100px;
     margin-top: 50px;
     text-align: center;
 }
 
-#module12 section {
+.moduleSection section {
     grid-area: row2;
     min-height: 100px;
+}
+
+#module12 {
+    grid-template-areas: "figure row1"
+                            "figure row2";
+}
+
+#module15 {
+    grid-template-areas: "row1 figure"
+                            "row2 figure";
 }
 
 
