--- a/style.css
+++ b/style.css
@@ -27,16 +27,21 @@ body>header h2 {
     grid-template: 1fr 1fr / 1fr 1fr;
     justify-content: center;
     justify-items: center;
+    padding-bottom: 20px;
+    border-bottom: 3px solid darkblue;
 }
 
 .moduleSection figure {
     grid-area: figure;
+    border: 2px solid #aaa;
+    padding: 5px;
 }
 
 .moduleSection figure img {
     width: 100%;
     height: 100%;
     text-align: center;
+    margin-bottom: 5px;
 }
 
 .moduleSection figure figcaption {
@@ -57,19 +62,19 @@ body>header h2 {
     min-height: 100px;
 }
 
-#module12 {
+.moduleSection:nth-child(even) {
     grid-template-areas: "figure row1"
                             "figure row2";
 }
 
-#module15 {
+.moduleSection:nth-child(odd) {
     grid-template-areas: "row1 figure"
                             "row2 figure";
 }
 
 
 @media all and (max-width: 600px) {
-    #module12 {
+    .moduleSection:nth-child(even), .moduleSection:nth-child(odd) {
         grid-template: auto 1fr 1fr / 1fr;
         grid-template-areas: "figure"
                                 "row1"
