--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 body>header {
     text-align: center;
     background-color: #006;
-    color: beige;
+    color: #fea;
     margin: 0;
     padding: 20px 0;
 }
@@ -18,6 +18,44 @@ body>header h1 {
 
 body>header h2 {
     margin: 20px 0;
+}
+
+nav {
+  text-align: center;
+}
+
+nav li {
+  list-style: none;
+}
+
+nav a {
+  display: inline-block;
+  width: 100px;
+  margin: 0 20px;
+  padding: 10px;
+  background: #fea;
+  border-radius: 5px;
+  box-shadow: 3px 3px #666;
+  text-decoration: none;
+  font-weight: bold;
+  color: #006;
+}
+
+nav a.current {
+  background: #fff8cc;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  box-shadow: 1px 1px;
+}
+
+nav a:hover {
+  color: red;
+  background: beige;
+  position: relative;
+  top: 2px;
+  left: 2px;
+  box-shadow: 1px 1px;
 }
 
 .moduleSection {
@@ -100,6 +138,10 @@ body>header h2 {
 #galleryURLMessage a {
   font-size: 1.6em;
   color: #ddd;
+}
+
+#contactMain {
+  padding: 30px 3%;
 }
 
 
