--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 body>header {
     text-align: center;
-    background-color: #006;
+    background-color: teal;
     color: #fea;
     margin: 0;
     padding: 20px 0;
@@ -38,7 +38,7 @@ nav a {
   box-shadow: 3px 3px #666;
   text-decoration: none;
   font-weight: bold;
-  color: #006;
+  color: rgb(0, 85, 85);
 }
 
 nav a.current {
@@ -77,7 +77,6 @@ nav a:hover {
 
 .moduleSection figure img {
     width: 100%;
-    height: 100%;
     text-align: center;
     margin-bottom: 5px;
     cursor: pointer;
